--- a/game_car.html
+++ b/game_car.html
@@ -46,6 +46,20 @@
       display: none;
       z-index: 1;
     }
+    /* Updated countdown style for better visibility */
+    #countdown {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #fff;
+      font-size: 72px;
+      display: none;
+      z-index: 1000;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 20px 40px;
+      border-radius: 10px;
+    }
     #imuPanel {
       position: absolute;
       top: 10px;
@@ -87,6 +101,8 @@
   <div id="wsMessage">Latest Message: </div>
   <!-- Game Over message -->
   <div id="gameOver">Game Over</div>
+  <!-- Countdown display -->
+  <div id="countdown"></div>
   <!-- IMU connection panel -->
   <div id="imuPanel">
     <label for="imuIdInput">Enter IMU ID:</label>
@@ -123,12 +139,10 @@
     const roadWidth = 20;      // We'll make it narrower so lines are visible near the edges
 
     // For obstacle spacing logic
-    // Minimum distance between parked cars on the same row
     const minCarSeparation = 2.0; 
-    // Because the car is about 1 wide, let's define a margin so they don't go off the road
     const sideMargin = 1.0;
 
-    // New lookahead distance for spawning chunks earlier
+    // Lookahead distance for spawning chunks earlier
     const spawnDistance = 400;
 
     // ----------------------
@@ -136,44 +150,31 @@
     // ----------------------
     function createCartoonCar(color = 0x0000ff) {
       const carGroup = new THREE.Group();
-
-      // Main body (width X=1, height Y=0.5, length Z=2)
       const bodyGeometry = new THREE.BoxGeometry(1, 0.5, 2);
       const bodyMaterial = new THREE.MeshPhongMaterial({ color });
       const body = new THREE.Mesh(bodyGeometry, bodyMaterial);
       body.position.set(0, 0.25, 0);
       carGroup.add(body);
-
-      // Cabin (width X=1, height Y=0.5, length Z=1)
       const cabinGeometry = new THREE.BoxGeometry(1, 0.5, 1);
       const cabinMaterial = new THREE.MeshPhongMaterial({ color: 0x888888 });
       const cabin = new THREE.Mesh(cabinGeometry, cabinMaterial);
       cabin.position.set(0, 0.75, 0);
       carGroup.add(cabin);
-
-      // Wheels (four cylinders) – axis along X
       const wheelGeometry = new THREE.CylinderGeometry(0.2, 0.2, 0.2, 12);
       const wheelMaterial = new THREE.MeshPhongMaterial({ color: 0x333333 });
-      
-      // front wheels (forward in Z)
       const frontLeftWheel = new THREE.Mesh(wheelGeometry, wheelMaterial);
       frontLeftWheel.rotation.x = Math.PI / 2; 
       frontLeftWheel.position.set(0.4, 0, 0.7);
       carGroup.add(frontLeftWheel);
-
       const frontRightWheel = frontLeftWheel.clone();
       frontRightWheel.position.set(-0.4, 0, 0.7);
       carGroup.add(frontRightWheel);
-
-      // back wheels (backward in Z)
       const backLeftWheel = frontLeftWheel.clone();
       backLeftWheel.position.set(0.4, 0, -0.7);
       carGroup.add(backLeftWheel);
-
       const backRightWheel = frontLeftWheel.clone();
       backRightWheel.position.set(-0.4, 0, -0.7);
       carGroup.add(backRightWheel);
-
       return carGroup;
     }
 
@@ -182,42 +183,31 @@
     // ----------------------
     function createParkedCar(color = 0xff0000) {
       const carGroup = new THREE.Group();
-
-      // Main body
       const bodyGeometry = new THREE.BoxGeometry(1, 0.5, 2);
       const bodyMaterial = new THREE.MeshPhongMaterial({ color });
       const body = new THREE.Mesh(bodyGeometry, bodyMaterial);
       body.position.set(0, 0.25, 0);
       carGroup.add(body);
-
-      // Cabin
       const cabinGeometry = new THREE.BoxGeometry(1, 0.5, 1);
       const cabinMaterial = new THREE.MeshPhongMaterial({ color: 0x555555 });
       const cabin = new THREE.Mesh(cabinGeometry, cabinMaterial);
       cabin.position.set(0, 0.75, 0);
       carGroup.add(cabin);
-
-      // Wheels
       const wheelGeometry = new THREE.CylinderGeometry(0.2, 0.2, 0.2, 12);
       const wheelMaterial = new THREE.MeshPhongMaterial({ color: 0x222222 });
-
       const frontLeftWheel = new THREE.Mesh(wheelGeometry, wheelMaterial);
       frontLeftWheel.rotation.x = Math.PI / 2;
       frontLeftWheel.position.set(0.4, 0, 0.7);
       carGroup.add(frontLeftWheel);
-
       const frontRightWheel = frontLeftWheel.clone();
       frontRightWheel.position.set(-0.4, 0, 0.7);
       carGroup.add(frontRightWheel);
-
       const backLeftWheel = frontLeftWheel.clone();
       backLeftWheel.position.set(0.4, 0, -0.7);
       carGroup.add(backLeftWheel);
-
       const backRightWheel = frontLeftWheel.clone();
       backRightWheel.position.set(-0.4, 0, -0.7);
       carGroup.add(backRightWheel);
-
       return carGroup;
     }
 
@@ -225,66 +215,49 @@
     // Initialize the three.js scene and game objects
     // ----------------------
     function init() {
-      // If there's an old renderer (from a previous game), remove it
+      // Remove any old renderer
       if (renderer && renderer.domElement) {
         document.body.removeChild(renderer.domElement);
       }
-
-      // Create scene and set background color
       scene = new THREE.Scene();
       scene.background = new THREE.Color(0x87CEEB); // sky blue
-
-      // Create a perspective camera
       camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
       camera.position.set(0, 5, -10);
       camera.lookAt(0, 0, 0);
-
-      // Create renderer and add to the document
       renderer = new THREE.WebGLRenderer({ antialias: true });
       renderer.setSize(window.innerWidth, window.innerHeight);
+      // Ensure the canvas is behind UI elements
+      renderer.domElement.style.position = "absolute";
+      renderer.domElement.style.zIndex = "0";
       document.body.appendChild(renderer.domElement);
-
-      // Lighting
       const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
       scene.add(ambientLight);
       const directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
       directionalLight.position.set(0, 50, -50);
       scene.add(directionalLight);
-
-      // Create the player car
       player = createCartoonCar(0x0000ff);
       player.position.set(0, 0, 0);
       scene.add(player);
-
-      // Reset infinite world parameters
       spawnZ = 0;
       obstacles = [];
       roadSegments = [];
       score = 0;
       gameOver = false;
-
-      // Hide "Game Over" and "Restart" UI
       document.getElementById("gameOver").style.display = "none";
       document.getElementById("restartGameBtn").style.display = "none";
-
-      // Spawn the first chunk
       spawnChunk(spawnZ);
-
-      // Listen for window resize events
       window.addEventListener('resize', onWindowResize, false);
-
-      // Start the animation loop
       animate();
     }
 
     // ----------------------
-    // Spawn a "chunk" of road + obstacles from zStart to zStart + chunkSize
+    // Spawn a chunk of road and obstacles
     // ----------------------
     function spawnChunk(zStart) {
       spawnRoadSegment(zStart);
       spawnRoadLines(zStart);
       spawnObstacles(zStart);
-      spawnZ += chunkSize; // Next chunk should start after this
+      spawnZ += chunkSize;
     }
 
     // Create a road segment (dark gray plane)
@@ -298,25 +271,20 @@
       roadSegments.push(roadSegment);
     }
 
-    // Create white/yellow lines on the road
+    // Create road lines
     function spawnRoadLines(zStart) {
-      // We'll do a dashed yellow center line, plus white boundary lines
-      const dashLength = 2;  // each dash is length in the Z direction
-      const dashSpace = 4;   // distance between dashes
+      const dashLength = 2, dashSpace = 4;
       const dashCount = Math.floor(chunkSize / dashSpace);
-
       for (let i = 0; i < dashCount; i++) {
         const dashZ = zStart + i * dashSpace + dashSpace / 2;
         const dashGeom = new THREE.PlaneGeometry(0.2, dashLength);
         const dashMat = new THREE.MeshPhongMaterial({ color: 0xffff00 });
         const dash = new THREE.Mesh(dashGeom, dashMat);
         dash.rotation.x = -Math.PI / 2;
-        dash.position.set(0, 0.01, dashZ);  // 0 in X, slight lift in Y
+        dash.position.set(0, 0.01, dashZ);
         scene.add(dash);
         roadSegments.push(dash);
       }
-
-      // Left boundary line
       const leftLineGeom = new THREE.PlaneGeometry(0.1, chunkSize);
       const leftLineMat = new THREE.MeshPhongMaterial({ color: 0xffffff });
       const leftLine = new THREE.Mesh(leftLineGeom, leftLineMat);
@@ -324,37 +292,24 @@
       leftLine.position.set(-roadWidth / 2, 0.01, zStart + chunkSize / 2);
       scene.add(leftLine);
       roadSegments.push(leftLine);
-
-      // Right boundary line
       const rightLine = leftLine.clone();
       rightLine.position.set(roadWidth / 2, 0.01, zStart + chunkSize / 2);
       scene.add(rightLine);
       roadSegments.push(rightLine);
     }
 
-    // Generate obstacles within this chunk, spaced out by obstacleSpacing
+    // Generate obstacles within this chunk
     function spawnObstacles(zStart) {
-      // A few sample colors for variety
       const colors = [0xff0000, 0x00ff00, 0x0000ff, 0xffff00, 0xff00ff, 0x00ffff, 0xffffff, 0xffa500];
-      
       for (let z = zStart + obstacleSpacing; z < zStart + chunkSize; z += obstacleSpacing) {
-        // We'll place 2 or 3 cars per "row" 
-        const obstacleCount = 2 + Math.floor(Math.random() * 2); // 2 or 3 obstacles
-        // Keep track of the X positions chosen so far in this row
+        const obstacleCount = 2 + Math.floor(Math.random() * 2);
         const chosenXPositions = [];
-
         for (let i = 0; i < obstacleCount; i++) {
-          let attemptCount = 0;
-          let foundSpot = false;
-          let xPos = 0;
-
+          let attemptCount = 0, foundSpot = false, xPos = 0;
           while (attemptCount < 10 && !foundSpot) {
-            // Random X in a range that keeps them on the road
             const minX = -roadWidth / 2 + sideMargin; 
-            const maxX =  roadWidth / 2 - sideMargin; 
+            const maxX = roadWidth / 2 - sideMargin; 
             xPos = Math.random() * (maxX - minX) + minX;
-
-            // Check against previously chosen positions
             let tooClose = false;
             for (let px of chosenXPositions) {
               if (Math.abs(xPos - px) < minCarSeparation) {
@@ -362,14 +317,12 @@
                 break;
               }
             }
-
             if (!tooClose) {
               foundSpot = true;
               chosenXPositions.push(xPos);
             }
             attemptCount++;
           }
-
           if (foundSpot) {
             const randColor = colors[Math.floor(Math.random() * colors.length)];
             const parkedCar = createParkedCar(randColor);
@@ -388,7 +341,7 @@
       renderer.setSize(window.innerWidth, window.innerHeight);
     }
 
-    // Check collision between player and obstacles using bounding boxes
+    // Check for collisions using bounding boxes
     function checkCollisions() {
       const playerBox = new THREE.Box3().setFromObject(player);
       for (let obs of obstacles) {
@@ -400,13 +353,13 @@
       return false;
     }
 
-    // Update the score display based on player's z position
+    // Update score based on player's z position
     function updateScore() {
       score = Math.floor(player.position.z);
       document.getElementById("score").textContent = "Score: " + score;
     }
 
-    // Update the high score if the current score is higher
+    // Update high score if needed
     function updateHighScore() {
       if (score > highScore) {
         highScore = score;
@@ -418,34 +371,20 @@
     function animate() {
       if (gameOver) return;
       animationId = requestAnimationFrame(animate);
-
-      // Constantly move the player forward along the z-axis
       player.position.z += playerSpeed;
-
-      // Convert the current IMU tilt from radians to degrees
       const tiltInDegrees = currentTilt.x * (180 / Math.PI);
-      // Use the tilt (in degrees) to adjust the player's x position
       player.position.x += tiltInDegrees * lateralSpeedFactor;
-
-      // Keep the player within some horizontal bounds
       if (player.position.x < -roadWidth / 2) player.position.x = -roadWidth / 2;
-      if (player.position.x > roadWidth / 2)  player.position.x =  roadWidth / 2;
-
-      // Update camera position to follow the player
+      if (player.position.x > roadWidth / 2)  player.position.x = roadWidth / 2;
       camera.position.z = player.position.z - 10;
       camera.position.x = player.position.x;
       camera.lookAt(player.position.x, player.position.y, player.position.z);
-
-      // If we're approaching the end of the current chunk, spawn another
       if (player.position.z + spawnDistance > spawnZ) {
         spawnChunk(spawnZ);
       }
-
-      // Collision detection
       if (checkCollisions()) {
         endGame();
       }
-
       updateScore();
       renderer.render(scene, camera);
     }
@@ -454,29 +393,48 @@
     function endGame() {
       gameOver = true;
       cancelAnimationFrame(animationId);
-
-      // Update and show high score
       updateHighScore();
-
-      // Show game over UI
       document.getElementById("gameOver").style.display = "block";
       document.getElementById("restartGameBtn").style.display = "block";
     }
 
-    // Restart the game by re-initializing everything
+    // Restart the game with a countdown
     function restartGame() {
-      // Clear out old objects from the scene
       if (animationId) {
         cancelAnimationFrame(animationId);
       }
       obstacles.forEach(o => scene.remove(o));
       roadSegments.forEach(r => scene.remove(r));
       scene.remove(player);
-
       obstacles = [];
       roadSegments = [];
+      // Hide game over UI and trigger countdown before re‑initializing
+      document.getElementById("gameOver").style.display = "none";
+      document.getElementById("restartGameBtn").style.display = "none";
+      startCountdown(init);
+    }
 
-      init();
+    // ----------------------
+    // Countdown function before starting the game
+    // ----------------------
+    function startCountdown(callback) {
+      const countdownEl = document.getElementById("countdown");
+      let count = 3;
+      countdownEl.style.display = "block";
+      countdownEl.textContent = count;
+      const interval = setInterval(() => {
+        count--;
+        if (count > 0) {
+          countdownEl.textContent = count;
+        } else {
+          clearInterval(interval);
+          countdownEl.textContent = "Go!";
+          setTimeout(() => {
+            countdownEl.style.display = "none";
+            callback();
+          }, 500);
+        }
+      }, 1000);
     }
 
     // ----------------------
@@ -489,30 +447,21 @@
         alert("Please enter an IMU ID.");
         return;
       }
-
-      // Example WS URL, change to your actual WebSocket server/endpoint
       const wsUrl = `wss://personal-site-oi5a.onrender.com/api/ws/imu/${imuId}/broadcast/`;
       console.log("Connecting to", wsUrl);
-
-      // Close any existing connection before creating a new one
       if (socket) {
         socket.close();
       }
-
       socket = new WebSocket(wsUrl);
-
       socket.onopen = function(event) {
         console.log("Connected to:", wsUrl);
         document.getElementById("wsMessage").textContent = "Connected to: " + wsUrl;
       };
-
       socket.onmessage = function(event) {
         console.log("Message from server:", event.data);
         document.getElementById("wsMessage").textContent = event.data;
-
         try {
           const msg = JSON.parse(event.data);
-          // Update current tilt values if available in the message (tilt values are in radians)
           if (msg.data && msg.data.tilt) {
             currentTilt = msg.data.tilt;
           }
@@ -520,12 +469,10 @@
           console.error("Error parsing message:", e);
         }
       };
-
       socket.onclose = function(event) {
         console.log("Disconnected from server");
         document.getElementById("wsMessage").textContent = "Disconnected from server";
       };
-
       socket.onerror = function(error) {
         console.error("WebSocket error:", error);
         document.getElementById("wsMessage").textContent = "WebSocket error. Check the console for details.";
@@ -533,7 +480,7 @@
     });
 
     // ----------------------
-    // Start Game on Button Click (after ensuring an IMU ID is provided)
+    // Start Game on Button Click (with countdown)
     // ----------------------
     document.getElementById("startGameBtn").addEventListener("click", function() {
       const imuId = document.getElementById("imuIdInput").value.trim();
@@ -541,13 +488,11 @@
         alert("Please enter an IMU ID before starting the game.");
         return;
       }
-      // If not already connected, trigger the connect button click
       if (!socket || socket.readyState !== WebSocket.OPEN) {
         document.getElementById("connectBtn").click();
       }
-      // Hide the Start Game button, then init
       this.style.display = "none";
-      init();
+      startCountdown(init);
     });
 
     // Restart button click listener
